@@ -1,0 +1,6 @@
+================
+numba.closures
+================
+
+.. automodule:: numba.closures
+   :members:
