@@ -1,0 +1,6 @@
+================
+numba.pipeline
+================
+
+.. automodule:: numba.pipeline
+   :members:
